--- a/app.json
+++ b/app.json
@@ -55,7 +55,7 @@
         },
         "AUTH_CHANNEL": {
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
-            "value" "-1001857790096"
+            "value" "-1001857790096",
             "required": true
         },
         "DATABASE_URI": {
